--- a/game-library.html
+++ b/game-library.html
@@ -2,12 +2,6 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Boardwalk Games, your ultimate gaming retreat! Perfect for casual gamers, enthusiasts, and student gatherings. Visit us for your next adventure in board gaming.">
-
-    <title>Boardwalk Games | Home</title>
     <!-- bootstrap import -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -16,33 +10,47 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Explore Boardwalk Games' vast library of engaging and exciting board games available for rent or purchase. Reserve your game online and embark on your next board game adventure today!">
+    <title>Boardwalk Games | Game Libray</title>
 </head>
+
 <!-- classes on body set to work with my-auto on footer to push footer down to bottom -->
+
 <body class="d-flex flex-column min-vh-100">
     <!-- navigation -->
     <div>navigation</div>
     <!-- header with carousel -->
     <header class="container">
         <div class="row">
-            <div class="col-12 col-xl-6">boardwalk games intro txt</div>
+            <div class="col-12 col-xl-6">game library intro txt</div>
             <div class="col-12 col-xl-6">carousel</div>
         </div>
     </header>
-    <!-- main elemnent to hold key sections of homepage -->
     <main>
         <section class="container">
             <div class="row">
-                <div class="col-12">Services section heading</div>
-                <div class="col-12 col-md-6 col-xl-3">Services card</div>
-                <div class="col-12 col-md-6 col-xl-3">Services card</div>
-                <div class="col-12 col-md-6 col-xl-3">Services card</div>
-                <div class="col-12 col-md-6 col-xl-3">Services card</div>
+                <div class="col-12">new games section heading</div>
+                <div class="col-12 col-md-6 col-xl-3">games card</div>
+                <div class="col-12 col-md-6 col-xl-3">games card</div>
+                <div class="col-12 col-md-6 col-xl-3">games card</div>
+                <div class="col-12 col-md-6 col-xl-3">games card</div>
+            </div>
+        </section>
+        <section class="container">
+            <div class="row">
+                <div class="col-12">favourite games section heading</div>
+                <div class="col-12 col-md-6 col-xl-3">games card</div>
+                <div class="col-12 col-md-6 col-xl-3">games card</div>
+                <div class="col-12 col-md-6 col-xl-3">games card</div>
+                <div class="col-12 col-md-6 col-xl-3">games card</div>
             </div>
         </section>
     </main>
-
     <!-- footer/contact -->
-     <!-- mt-auto pushes footer to bottom -->
+    <!-- mt-auto pushes footer to bottom -->
     <footer class="mt-auto">
         <div class="container">
             <div class="row justify-content-center">
