--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <!-- classes on body set to work with my-auto on footer to push footer down to bottom -->
 <body class="d-flex flex-column min-vh-100">
     <!-- navigation -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
         <div class="container">
-          <a class="navbar-brand" href="./index.html">Navbar</a>
+          <a class="navbar-brand" href="./index.html"><img class="logo" src="./assets/images/logo-sm-white.png" alt="boardwalk games logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
