--- a/index.html
+++ b/index.html
@@ -18,36 +18,46 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
 </head>
 <!-- classes on body set to work with my-auto on footer to push footer down to bottom -->
+
 <body class="d-flex flex-column min-vh-100">
     <!-- navigation -->
     <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
         <div class="container">
-          <a class="navbar-brand" href="./index.html"><img class="logo" src="./assets/images/logo-sm-white.png" alt="boardwalk games logo"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./game-library.html">Games</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
-            </ul>
-          </div>
+            <a class="navbar-brand" href="./index.html"><img class="logo" src="./assets/images/logo-sm-white.png"
+                    alt="boardwalk games logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./game-library.html">Games</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
+    </nav>
     <!-- header with carousel -->
-    <header class="container">
+    <header id="header" class="section container">
         <div class="row">
-            <div class="col-12 col-xl-6">boardwalk games intro txt</div>
+            <div class="col-12 col-xl-6 text-center text-xl-start">
+                <h1 class="display-3">Boardwalk Games</h1>
+                <p class="lead display-6 sub-heading-color">Your next adventure is waiting!</p>
+                <p class="my-4">Welcome to Boardwalk Games, Your Ultimate Gaming Getaway! Escape into the world of board games and
+                    café delights. Whether you're a casual gamer seeking a cosy nook to unwind, a board game enthusiast
+                    ready for your next challenge, or a student gamer looking for a fun, affordable hangout, we've got
+                    you covered.</p>
+            </div>
             <div class="col-12 col-xl-6">carousel</div>
         </div>
     </header>
@@ -65,7 +75,7 @@
     </main>
 
     <!-- footer/contact -->
-     <!-- mt-auto pushes footer to bottom -->
+    <!-- mt-auto pushes footer to bottom -->
     <footer class="mt-auto">
         <div class="container">
             <div class="row justify-content-center">
