--- a/game-library.html
+++ b/game-library.html
@@ -57,60 +57,177 @@
                     of board games to rent or buy. From timeless classics to the latest sensations, our shelves are
                     packed with games waiting to be discovered.</p>
             </div>
-            
-                <div class="col-12 col-xl-6">
-                    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="./assets/images/game-library-carousel-1.webp" class="d-block w-100"
-                                    alt="Bookshelves filled with boardgames">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="./assets/images/game-library-carousel-2.webp" class="d-block w-100"
-                                    alt="Bookshelves filled with boardgames">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="./assets/images/game-library-carousel-3.webp" class="d-block w-100"
-                                    alt=" Bookshelves filled with boardgames, one man is browsing the shelves">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="./assets/images/game-library-carousel-4.webp" class="d-block w-100"
-                                    alt=" 8 board games stacked on top of each other">
-                            </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
-                    </div>
-                </div>
 
-            
+            <div class="col-12 col-xl-6">
+                <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./assets/images/game-library-carousel-1.webp" class="d-block w-100"
+                                alt="Bookshelves filled with boardgames">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/images/game-library-carousel-2.webp" class="d-block w-100"
+                                alt="Bookshelves filled with boardgames">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/images/game-library-carousel-3.webp" class="d-block w-100"
+                                alt=" Bookshelves filled with boardgames, one man is browsing the shelves">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/images/game-library-carousel-4.webp" class="d-block w-100"
+                                alt=" 8 board games stacked on top of each other">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+
+
         </div>
     </header>
     <main>
-        <section class="container">
+
+        <section id="new-games" class="container section">
             <div class="row">
-                <div class="col-12">new games section heading</div>
-                <div class="col-12 col-md-6 col-xl-3">games card</div>
-                <div class="col-12 col-md-6 col-xl-3">games card</div>
-                <div class="col-12 col-md-6 col-xl-3">games card</div>
-                <div class="col-12 col-md-6 col-xl-3">games card</div>
+                <div class="col-12">
+                    <h2 class="text-center">New Games</h2>
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="card">
+                        <img src="assets/images/services-3.webp" alt=" Galaxy Pioneers board game" class="card-img-top">
+                        <div class="card-body">
+                            <h3 class="card-title sub-heading-color">Galaxy Pioneers</h3>
+                            <p class="card-text">
+                                Utilise resources wisely, negotiate with alien species, and navigate cosmic events to
+                                expand your interstellar empire.
+                            </p>
+                            <p><em>Number of players: 2-4</em></p>
+                            <p><em>Ages: 12+</em></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="card">
+                        <img src="assets/images/new-games-2.webp" alt=" Mystic Woods board game box"
+                            class="card-img-top">
+                        <div class="card-body">
+                            <h3 class="card-title sub-heading-color">Mystic Woods board game box</h3>
+                            <p class="card-text">
+                                Enter the enchanted forest of Mystic Woods. Combine spells, gather mystical creatures,
+                                and solve puzzles to protect the realm.
+                            </p>
+                            <p><em>Number of players: 1-6</em></p>
+                            <p><em>Ages: 10+</em></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="card">
+                        <img src="assets/images/new-games-3.webp" alt="Captain's Gambit board game box"
+                            class="card-img-top">
+                        <div class="card-body">
+                            <h3 class="card-title sub-heading-color">Captain's Gambit</h3>
+                            <p class="card-text">
+                                Engage in battles, form fleeting alliances, and navigate treacherous waters to become
+                                the most feared pirate of them all.
+                            </p>
+                            <p><em>Number of players: 3-4</em></p>
+                            <p><em>Ages: 14+</em></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="card">
+                        <img src="assets/images/new-games-4.webp" alt="Critter Quest board game box"
+                            class="card-img-top">
+                        <div class="card-body">
+                            <h3 class="card-title sub-heading-color">Critter Quest</h3>
+                            <p class="card-text">
+                                Solve simple puzzles, collect magical gems, and help friends along the way in this
+                                heartwarming journey of discovery and friendship.
+                            </p>
+                            <p><em>Number of players: 2-4</em></p>
+                            <p><em>Ages: 5+</em></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             </div>
         </section>
-        <section class="container">
+        <section id="fav-games" class="container section">
             <div class="row">
-                <div class="col-12">favourite games section heading</div>
-                <div class="col-12 col-md-6 col-xl-3">games card</div>
-                <div class="col-12 col-md-6 col-xl-3">games card</div>
-                <div class="col-12 col-md-6 col-xl-3">games card</div>
-                <div class="col-12 col-md-6 col-xl-3">games card</div>
+                <div class="col-12">
+                    <h2 class="text-center">Favourites</h2>
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="card">
+                        <img src="assets/images/fav-games-1.webp" alt=" Settlers of Catan board game"
+                            class="card-img-top">
+                        <div class="card-body">
+                            <h3 class="card-title sub-heading-color"> Settlers of Catan</h3>
+                            <p class="card-text">
+                                Picture yourself in the era of discoveries: after a long voyage of great deprivation,
+                                your ships have finally reached the coast of an uncharted island.
+                            </p>
+                            <p><em>Number of players: 3-4</em></p>
+                            <p><em>Ages: 10+</em></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="card">
+                        <img src="assets/images/fav-games-2.webp" alt="Monopoly board game" class="card-img-top">
+                        <div class="card-body">
+                            <h3 class="card-title sub-heading-color">Monopoly</h3>
+                            <p class="card-text">
+                                Featuring classic Monopoly gameplay, this favourite family board game is all about
+                                buying, selling, and trading properties to win.
+                            </p>
+                            <p><em>Number of players: 2-6</em></p>
+                            <p><em>Ages: 8+</em></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="card">
+                        <img src="assets/images/fav-games-3.webp" alt="Exploding Kittens card game"
+                            class="card-img-top">
+                        <div class="card-body">
+                            <h3 class="card-title sub-heading-color">Exploding Kittens</h3>
+                            <p class="card-text">
+                                Exploding Kittens is a kitty-powered version of Russian Roulette. Players take turns
+                                drawing cards until someone draws an exploding kitten card and loses the game!
+                            </p>
+                            <p><em>Number of players: 2-5</em></p>
+                            <p><em>Ages: 7+</em></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="card">
+                        <img src="assets/images/fav-games-4.webp" alt="Cluedo board game" class="card-img-top">
+                        <div class="card-body">
+                            <h3 class="card-title sub-heading-color">Cluedo</h3>
+                            <p class="card-text">
+                                The classic game of mystery and suspense. Cluedo has 6 suspects, 6 weapons and also a
+                                whole maze of possible murder scenes to explore. It's up to you to question the suspects
+                                and crack the case. </p>
+                            <p><em>Number of players: 2-6</em></p>
+                            <p><em>Ages: 8+</em></p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
