--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
                         <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
+                        <a class="nav-link" href="#services">Services</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./game-library.html">Games</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -174,14 +174,61 @@
 
     <!-- footer/contact -->
     <!-- mt-auto pushes footer to bottom -->
-    <footer class="mt-auto">
-        <div class="container">
+    <footer id="contact" class="mt-auto">
+        <div class="container section">
             <div class="row justify-content-center">
-                <div class="col-12">contact heading</div>
+                <div class="col-12 text-center">
+                    <h2 class="display-6">Contact us!</h2>
+                </div>
                 <!-- contact info -->
-                <div class="col-12 col-md-6 col-xl-4">contact info/socials</div>
+                <div class="col-12 col-md-6 col-xl-4">
+                    <h3 class="sub-heading-color">Contact info</h3>
+                    <address>
+                            <strong><i class="fa-solid fa-location-dot"></i> Boarwalk Games</strong><br>
+                            123 Boardwalk <br>
+                            Boardwalk City, 12345
+                    </address>
+                    <p><i class="fa-solid fa-phone"></i> 012 345 6789 <br>
+                        <i class="fa-regular fa-paper-plane"></i> info@boardwalk-games.co</p>
+                    <div class="social-links my-4">
+                        <a target="_blank" rel="noopener" aria-label="follow us on instagram" id="" href="http://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                        <a target="_blank" rel="noopener" aria-label="follow us on facebook" id="" href="http://www.facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                        <a target="_blank" rel="noopener" aria-label="follow us on Twitter /X" id="" href="http://www.X.com"><i class="fa-brands fa-x-twitter"></i></a>
+                    </div>
+                    </div>
                 <!-- opening times -->
-                <div class="col-12 col-md-6 col-xl-4">opening times</div>
+                <div class="col-12 col-md-6 col-xl-4">
+                    <table class="table table-dark">
+                        <thead>
+                          <tr>
+                            <th scope="col">Day</th>
+                            <th scope="col">Open</th>
+                            <th scope="col">Close</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td>Mon</td>
+                            <td colspan="2">Closed</td>
+                          </tr>
+                          <tr>
+                            <td>Tue-Thurs</td>
+                            <td>11am</td>
+                            <td>11pm</td>
+                          </tr>
+                          <tr>
+                            <td>Fri-Sat</td>
+                            <td>11am</td>
+                            <td>12am</td>
+                          </tr>
+                          <tr>
+                            <td>Sun</td>
+                            <td>12pm</td>
+                            <td>7pm</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                </div>
             </div>
         </div>
     </footer>
