--- a/booking.html
+++ b/booking.html
@@ -44,7 +44,7 @@
                         <a class="nav-link" href="./index.html#contact">Contact</a>
                     </li> 
                     <li class="nav-item">
-                        <a href="booking.html" aria-current="page" class="btn btn-primary ms-lg-3">Book now</a>
+                        <a href="booking.html" aria-current="page" class="btn custom-button-filled ms-lg-3">Book now</a>
                     </li>
                 </ul>
             </div>
@@ -102,7 +102,7 @@
                         </div>
                     </div>
 
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn custom-button-outline">Submit</button>
                 </form>
             </div>
         </div>
