--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a href="booking.html" class="btn btn-primary ms-lg-3">Book now</a>
+                        <a href="booking.html" class="custom-button-filled btn ms-lg-3">Book now</a>
                     </li>
                 </ul>
             </div>
@@ -62,7 +62,7 @@
                     ready for your next challenge, or a student gamer looking for a fun, affordable hangout, we've got
                     you covered.</p>
 
-                <a href="booking.html" class="btn btn-primary mb-4">Book now</a>
+                <a href="booking.html" class="btn custom-button-outline mb-4">Book now</a>
 
             </div>
             <div class="col-12 col-xl-6">
