--- a/booking.html
+++ b/booking.html
@@ -35,7 +35,10 @@
                         <a class="nav-link " href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
+                        <a class="nav-link" href="./index.html#services">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./index.html#events">Events</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"  href="./game-library.html">Games</a>
