--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
                         <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">Services</a>
+                        <a class="nav-link" href="./index.html#services">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./index.html#events">Events</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./game-library.html">Games</a>
@@ -180,6 +183,64 @@
                         </div>
                         <div class="card-footer">
                             <p class="mb-0">From €7 per child</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- events -->
+        <section id="events" class="container section">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h2 class="display-6">Join our events</h2>
+                </div>
+                <div class="col-12 col-lg-6 text-center text-xl-start">
+                    <p class="my-4"> Whether you're delving into dungeons, reliving classic games, or competing in
+                        high-stakes tournaments, there's something for every gamer. Reservations are recommended to
+                        ensure your spot at the table. Student discounts are available, so bring your student ID and
+                        enjoy more gaming for less.</p>
+                    <p>Outside scheduled events, our shop remains open for regular play. Join us anytime to discover new
+                        games and meet fellow enthusiasts.
+
+                    </p>
+                </div>
+                <!-- event table -->
+                <div class="col-12 col-lg-6">
+                    <table class="table table-hover col-12">
+                        <thead>
+                            <tr>
+                                <th scope="col">Event</th>
+                                <th scope="col">Date</th>
+                                <th scope="col">Time</th>
+                                <th scope="col">Price</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">Dungeons & Dragons</th>
+                                <td>Tuesdays</td>
+                                <td>8pm - 11pm </td>
+                                <td>@€25 for 6 sessions</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Retro Game Night</th>
+                                <td>Thursdays</td>
+                                <td>8pm - 11pm</td>
+                                <td>€5 per person*</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Last Sunday of the month</th>
+                                <td>Thursdays</td>
+                                <td>12pm - 7pm </td>
+                                <td>€10 per person</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <div class="row justify-content-center">
+                        <div class="col-12 col-md-9 text-center">
+                            <p class="offer">*Get 20% off with valid student ID</p>
+                            <a href="booking.html" class="btn custom-button-outline mb-4">Book now</a>
+
                         </div>
                     </div>
                 </div>
