--- a/booking.html
+++ b/booking.html
@@ -44,7 +44,7 @@
                         <a class="nav-link"  href="./game-library.html">Games</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./index.html#contact">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li> 
                     <li class="nav-item">
                         <a href="booking.html" aria-current="page" class="btn custom-button-filled ms-lg-3">Book now</a>
