--- a/success.html
+++ b/success.html
@@ -50,7 +50,7 @@
             <a class="nav-link" href="game-library.html">Games</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html#contact">Contact</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
             <a class="btn custom-button-filled ms-3" href="booking.html">Book now</a>
