fix: remove empty id from social links

--- a/game-library.html
+++ b/game-library.html
@@ -305,11 +305,11 @@
                     <p><i class="fa-solid fa-phone"></i> 012 345 6789 <br>
                         <i class="fa-regular fa-paper-plane"></i> info@boardwalk-games.co</p>
                     <div class="social-links my-4">
-                        <a target="_blank" rel="noopener" aria-label="follow us on instagram" id=""
+                        <a target="_blank" rel="noopener" aria-label="follow us on instagram"
                             href="http://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
-                        <a target="_blank" rel="noopener" aria-label="follow us on facebook" id=""
+                        <a target="_blank" rel="noopener" aria-label="follow us on facebook"
                             href="http://www.facebook.com"><i class="fa-brands fa-facebook"></i></a>
-                        <a target="_blank" rel="noopener" aria-label="follow us on Twitter /X" id=""
+                        <a target="_blank" rel="noopener" aria-label="follow us on Twitter /X"
                             href="http://www.X.com"><i class="fa-brands fa-x-twitter"></i></a>
                     </div>
                 </div>
